k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shield
  labels:
    name: shield
